feat : add the focus session button and its working

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anti productivity Suite </title>
+    <title>Anti Productivity Suite</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
-    
+    <h1>Anti Productivity Suite</h1>
+    <button class="focus" id="focus">Focus Session</button>
+    <script src="script.js"></script>
 </body>
 </html>
