feat : add the auto generating to do list and its function

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Anti Productivity Suite</h1>
     <button class="focus" id="focus">Focus Session</button>
+    <ul id="todo-list"></ul>
     <script src="script.js"></script>
 </body>
 </html>
