feat : add the start timer button and its working

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
     <h1>Anti Productivity Suite</h1>
     <button class="focus" id="focus">Focus Session</button>
     <ul id="todo-list"></ul>
+    <div class="countdown">
+     <button></button>   
+     <button class="timestart" id="timetimestart">Start Timer</button>
+     <div class="timer" id="timer">60s</div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
