feat : add the stop timer functionality

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <button class="focus" id="focus">Focus Session</button>
     <ul id="todo-list"></ul>
     <div class="countdown">
-     <button></button>   
-     <button class="timestart" id="timetimestart">Start Timer</button>
+     <button class="timeend">Stop timer</button>   
+     <button class="timestart" id="timestart">Start Timer</button>
      <div class="timer" id="timer">60s</div>
     </div>
     <script src="script.js"></script>
