feat : add the fake pomodoro alerts

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
      <button class="timestart" id="timestart">Start Timer</button>
      <div class="timer" id="timer">60s</div>
     </div>
+    <div id="pomodoro-alert" class="pomodoro-alert hidden">
+    <p id="pomodoro-message">You're doing great!</p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
