--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,26 @@
     <h1>Anti Productivity Suite</h1>
     <button class="focus" id="focus">Focus Session</button>
     <ul id="todo-list"></ul>
+
+    <!--Timer Countdown -->
     <div class="countdown">
      <button class="timeend">Stop timer</button>   
      <button class="timestart" id="timestart">Start Timer</button>
      <div class="timer" id="timer">60s</div>
     </div>
+
+    <!--Pomodoro alert -->
     <div id="pomodoro-alert" class="pomodoro-alert hidden">
     <p id="pomodoro-message">You're doing great!</p>
     </div>
+
+    <!-- Productivity Stats -->
+    <div id="productivity-stats" class="stats-panel">
+    <h2 class="dashboard-title">🧠 Productivity Stats</h2>
+    <div class="stats-grid" id="stats-grid">
+    
+    </div>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
