feat:add random meeting popups

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,16 @@
     <div class="stats-grid" id="stats-grid">
     
     </div>
+    
+</div>
+
+<!-- Fake Meeting Popup Container -->
+<div id="meeting-popup" class="hidden">
+  <div class="popup-content">
+    <h3>📞 Zoom Meeting Alert</h3>
+    <p id="popup-message">Meeting starting in 3... 2... just kidding.</p>
+    <button onclick="dismissPopup()">Dismiss</button>
+  </div>
 </div>
     <script src="script.js"></script>
 </body>
