feat : added a motivational page

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,10 @@
     <button onclick="dismissPopup()">Dismiss</button>
   </div>
 </div>
+
+<a href="motivatio.html">
+  <button class="meme-btn">✨ Get Motivated</button>
+</a>
     <script src="script.js"></script>
 </body>
 </html>
