feat : add floating bubbles to the main page

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,20 @@
 <a href="motivatio.html">
   <button class="meme-btn">✨ Get Motivated</button>
 </a>
+<div class="bubble-container">
+  <div class="bubble" style="--size: 60px; --left: 10%"></div>
+  <div class="bubble" style="--size: 40px; --left: 25%"></div>
+  <div class="bubble" style="--size: 80px; --left: 50%"></div>
+  <div class="bubble" style="--size: 30px; --left: 70%"></div>
+  <div class="bubble" style="--size: 50px; --left: 90%"></div>
+  <div class="bubble" style="--size: 60px; --left: 10%"></div>
+  <div class="bubble" style="--size: 40px; --left: 25%"></div>
+  <div class="bubble" style="--size: 80px; --left: 50%"></div>
+  <div class="bubble" style="--size: 30px; --left: 70%"></div>
+  <div class="bubble" style="--size: 50px; --left: 90%"></div>
+</div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
