feat : added the screenshots , demo video and the readme

--- a/public/hero.html
+++ b/public/hero.html
@@ -8,10 +8,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
   <section class="hero">
     <div class="hero-content">
-      <h1 class="title">💥 Anti-Productivity Suite</h1>
+      <h1 class="title">💥 ProcrastiMate</h1>
       <p class="subtitle">Get distracted like a PRO™️</p>
       <p class="tagline">Because crushing your goals is overrated.</p>
       <a href="index.html" class="cta">Ruin My Focus</a>
