--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Anti Productivity Suite</h1>
     <button class="focus" id="focus">Focus Session</button>
-    <ul id="todo-list"></ul>
+    <ul id="todo-list">
+        <li>To do list</li>
+    </ul>
 
     <!--Timer Countdown -->
     <div class="countdown">
